[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geolysis"
description = "geolysis.core is an opensource software for geotechnical engineering analysis and modeling."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT License" }
requires-python = ">=3.11"
keywords = [
    "geotechnical-engineering",
    "soil-classification",
    "settlement-analysis",
    "bearing-capacity-analysis",
]
authors = [{ name = "Patrick Boateng", email = "boatengpato.pb@gmail.com" }]
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "geolysis.__version__" }

[project.urls]
Homepage = "https://github.com/patrickboateng/geolysis"
Documentation = "https://geolysis.readthedocs.org"
Repository = "https://github.com/patrickboateng/geolysis"
Discussions = "https://github.com/patrickboateng/geolysis/discussions"
"Issue Tracker" = "https://github.com/patrickboateng/geolysis/issues"

[tool.setuptools]
packages = ["geolysis"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "coverage"]

[tool.pytest.ini_options]
addopts = "-ra --verbose --strict-markers --doctest-modules"
minversion = "6.0"
testpaths = ["tests", "src"]
doctest_optionflags = ["IGNORE_EXCEPTION_DETAIL", "NUMBER"]

[tool.docformatter]
style = "sphinx"
black = true
wrap-summaries = 79
wrap-descriptions = 79
pre-summary-newline = false
make-summary-multi-line = false
close-quotes-on-newline = true

[tool.pydocstyle]
# convention = "pep257"
ignore = ["D107", "D200"]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 79

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"utils.py" = ["F401"]
"soil_classifier.py" = ["F821", "E741"]
