[metadata]
name = geolab
version = attr: geolab.VERSION
author = Patrick Boateng
author_email = boatengpato.pb@gmail.com
description = Excel AddIn for Soil Classification using USCS and AASHTO Classification system
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Pato546/soil_classifier
license_files = LICENSE.txt
classifiers = 
    Development Status :: 5 - Production/Stable
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: Microsoft
    Operating System :: Microsoft :: Windows :: Windows 10
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython

[options]
package_dir=
    =src 
packages = find:
python_requires = >=3.9
install_requires = 
    xlwings

[options.packages.find]
where = src

[options.extras_require]
dev = 
    wheel
    black
    pytest
