[metadata]
name = geolab
version = attr: geolab.__version__
author = Patrick Boateng
author_email = boatengpato.pb@gmail.com
description = Excel AddIn for Soil Classification using USCS and AASHTO Classification system
long_description = file: README.rst
url = https://github.com/Pato546/geolab
license_files = LICENSE.txt
classifiers = 
    Development Status :: 5 - Production/Stable
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: Microsoft
    Operating System :: Microsoft :: Windows :: Windows 10
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >=3.9
# install_requires = 
#     xlwings

[options.extras_require]
dev = 
    wheel
    black
    pytest
